--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "962db38c-a81c-4548-945e-c1b2d5aaa415"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
